[gd_scene load_steps=2 format=3 uid="uid://dckaow6kdj6h1"]

[ext_resource type="Script" path="res://scripts/GUI/death_screen.gd" id="1_g7vf1"]

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7vf1")

[node name="Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 157.0
offset_right = 138.0
offset_bottom = 245.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "You Died"

[node name="Final_Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.5
offset_top = -44.0
offset_right = 202.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Final Score: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -290.0
offset_right = 145.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartScreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Start Screen"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Try Again?"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="VBoxContainer/StartScreen" to="." method="_on_start_screen_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
